--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -44,5 +44,13 @@ spring.jpa.hibernate.ddl-auto=update
 
 #Live Reload기능 활성화
 spring.devtools.livereload.enabled = true
+
+# Properties 파일 - Thymeleaf 설정
+
 # Thymeleafcache사용중지
-#spring.thymeleaf.cache = false
+spring.thymeleaf.cache=false
+
+#spring.thymeleaf.enabled=true
+#spring.thymeleaf.check-template-location=true
+#spring.thymeleaf.prefix=classpath:/templates/
+#spring.thymeleaf.suffix=.html
