--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,23 +34,48 @@ logging.level.org.hibernate.type.descriptor=trace
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.ddl-auto=create
 
-
+# ---------------------------------------------------------  #
 #none: 사용하지 않음
 #validate: 엔티티와 테이블 정상 매핑 확인
 
 #create: 기존 테이블 삭제 후 테이블 생성
 #create-drop: 기존 테이블 삭제 테이블 생성. 종료 시점에 테이블 삭제
 #update: 변경된 스키마 적용
+# ---------------------------------------------------------  #
+
 
 #Live Reload기능 활성화
 spring.devtools.livereload.enabled = true
 
+# ---------------------------------------------------------  #
 # Properties 파일 - Thymeleaf 설정
-
+# ---------------------------------------------------------  #
 # Thymeleafcache사용중지
 spring.thymeleaf.cache=false
-
+# ---------------------------------------------------------  #
 #spring.thymeleaf.enabled=true
 #spring.thymeleaf.check-template-location=true
 #spring.thymeleaf.prefix=classpath:/templates/
 #spring.thymeleaf.suffix=.html
+# ---------------------------------------------------------  #
+
+
+
+# ---------------------------------------------------------  #
+# upload 설정
+# ---------------------------------------------------------  #
+# 파일업로드 설정 여부
+spring.servlet.multipart.enabled=true
+# 파일위치
+spring.servlet.multipart.location=C:\\javaStudy\\upload
+# 최대용량
+spring.servlet.multipart.max-request-size=30MB
+# 파일당 최대 용량
+spring.servlet.multipart.max-file-size=10MB
+
+# 도메인 경로
+com.spring.myproject.path=C:\\javaStudy\\upload
+
+
+
+
