- Member Entity Test

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -77,5 +77,13 @@ spring.servlet.multipart.max-file-size=10MB
 com.spring.myproject.path=C:\\javaStudy\\upload
 
 
+# 로그 레벨 설정
+logging.level.org.springframework=info
+logging.level.com.spring.myproject=debug
+
+# security 로그 레벨 설정 (최대한 낮은 레벨 설정: 에러 메시지 표시됨)
+logging.level.org.springframework.security=trace
+
+
 
 
