--- a/build.gradle
+++ b/build.gradle
@@ -60,8 +60,8 @@ dependencies {
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
 	// net.coobird/thumbnailator
 	implementation 'net.coobird:thumbnailator:0.4.20'
-	// CSRF토큰:
-	//implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6:3.1.2.RELEASE'
+	// thymelef에서 인증 관련 라이브러리
+	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6:3.1.2.RELEASE'
 
 
 	// spring-boot-devtools
@@ -72,6 +72,9 @@ dependencies {
 	// IntelliJ gradel 적용시 필수(eclipse인 생략)
 	testAnnotationProcessor 'org.projectlombok:lombok'
 	testImplementation  'org.projectlombok:lombok'
+	// spring-security-test
+	testImplementation 'org.springframework.security:spring-security-test:6.3.1'
+
 
 
 
