--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ server.port= 9091
 # server.servlet.context-path=/
 server.servlet.encoding.charset=UTF-8
 
+# maria DB
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://localhost:3306/shopdb
 spring.datasource.username=java
@@ -13,6 +14,7 @@ spring.datasource.password=1234
 #SQL은 표준 SQL과 DBMS벤더에서 제공하는 SQL
 #JPA 에 SQL 방언을 사용할 수 있게 알려주는 역할
 spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
+
 
 #H2 DB
 #spring.datasource.driver-class-name=org.h2.Driver
