--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,9 +1,11 @@
 
 #H2 DB
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:test
-spring.datasource.username=sa
-spring.datasource.password=
-
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# url\uC124\uC815\uC744 \uD558\uC9C0 \uC54A\uC73C\uBA74 Spring Boot\uAC00 \uC784\uC758\uB85C \uC774\uB984\uC744 \uC124\uC815\uB428
+# http://localhost:9091/h2-console\uB85C \uC811\uC18D\uD558\uAC8C \uB418\uBA74 H2\uAC00 \uC81C\uACF5\uD558\uB294 \uC6F9 \uCF58\uC194\uC5D0 \uC811\uADFC \uAC00\uB2A5
+#spring.datasource.url=jdbc:h2:mem:test
+#spring.datasource.username=sa
+#spring.datasource.password=
+#
+#spring.h2.console.enabled=true
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
