--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,48 +11,52 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/shopdb
 spring.datasource.username=java
 spring.datasource.password=1234
 
-#SQL은 표준 SQL과 DBMS벤더에서 제공하는 SQL
-#JPA 에 SQL 방언을 사용할 수 있게 알려주는 역할
+#SQL\uC740 \uD45C\uC900 SQL\uACFC DBMS\uBCA4\uB354\uC5D0\uC11C \uC81C\uACF5\uD558\uB294 SQL
+#JPA \uC5D0 SQL \uBC29\uC5B8\uC744 \uC0AC\uC6A9\uD560 \uC218 \uC788\uAC8C \uC54C\uB824\uC8FC\uB294 \uC5ED\uD560
 spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
 
 
 #H2 DB
+# # url\uC124\uC815\uC744 \uD558\uC9C0 \uC54A\uC73C\uBA74 Spring Boot\uAC00 \uC784\uC758\uB85C \uC774\uB984\uC744 \uC124\uC815\uB428
+# http://localhost:9091/h2-console\uB85C \uC811\uC18D\uD558\uAC8C \uB418\uBA74 H2\uAC00 \uC81C\uACF5\uD558\uB294 \uC6F9 \uCF58\uC194\uC5D0 \uC811\uADFC \uAC00\uB2A5
+
 #spring.datasource.driver-class-name=org.h2.Driver
 #spring.datasource.url=jdbc:h2:mem:test
 #spring.datasource.username=sa
 #spring.datasource.password=
-#
+#spring.h2.console.enabled=true
+
 #spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 
-# jpa SQL query 콘솔 출력
+# jpa SQL query \uCF58\uC194 \uCD9C\uB825
 spring.jpa.properties.hibernate.show_sql = true
-# 콘솔창에 출력되는 쿼리를 가독성이 좋게 포맷팅
+# \uCF58\uC194\uCC3D\uC5D0 \uCD9C\uB825\uB418\uB294 \uCFFC\uB9AC\uB97C \uAC00\uB3C5\uC131\uC774 \uC88B\uAC8C \uD3EC\uB9F7\uD305
 spring.jpa.properties.hibernate.format_sql=true
-# query에 물음표로 출력되는 바인드 파라미터 출력
+# query\uC5D0 \uBB3C\uC74C\uD45C\uB85C \uCD9C\uB825\uB418\uB294 \uBC14\uC778\uB4DC \uD30C\uB77C\uBBF8\uD130 \uCD9C\uB825
 logging.level.org.hibernate.type.descriptor=trace
 
-#데이터 베이스 초기화 전략 설정
+#\uB370\uC774\uD130 \uBCA0\uC774\uC2A4 \uCD08\uAE30\uD654 \uC804\uB7B5 \uC124\uC815
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.ddl-auto=create
 
 # ---------------------------------------------------------  #
-#none: 사용하지 않음
-#validate: 엔티티와 테이블 정상 매핑 확인
+#none: \uC0AC\uC6A9\uD558\uC9C0 \uC54A\uC74C
+#validate: \uC5D4\uD2F0\uD2F0\uC640 \uD14C\uC774\uBE14 \uC815\uC0C1 \uB9E4\uD551 \uD655\uC778
 
-#create: 기존 테이블 삭제 후 테이블 생성
-#create-drop: 기존 테이블 삭제 테이블 생성. 종료 시점에 테이블 삭제
-#update: 변경된 스키마 적용
+#create: \uAE30\uC874 \uD14C\uC774\uBE14 \uC0AD\uC81C \uD6C4 \uD14C\uC774\uBE14 \uC0DD\uC131
+#create-drop: \uAE30\uC874 \uD14C\uC774\uBE14 \uC0AD\uC81C \uD14C\uC774\uBE14 \uC0DD\uC131. \uC885\uB8CC \uC2DC\uC810\uC5D0 \uD14C\uC774\uBE14 \uC0AD\uC81C
+#update: \uBCC0\uACBD\uB41C \uC2A4\uD0A4\uB9C8 \uC801\uC6A9
 # ---------------------------------------------------------  #
 
 
-#Live Reload기능 활성화
+#Live Reload\uAE30\uB2A5 \uD65C\uC131\uD654
 spring.devtools.livereload.enabled = true
 
 # ---------------------------------------------------------  #
-# Properties 파일 - Thymeleaf 설정
+# Properties \uD30C\uC77C - Thymeleaf \uC124\uC815
 # ---------------------------------------------------------  #
-# Thymeleafcache사용중지
+# Thymeleafcache\uC0AC\uC6A9\uC911\uC9C0
 spring.thymeleaf.cache=false
 # ---------------------------------------------------------  #
 #spring.thymeleaf.enabled=true
@@ -64,26 +68,26 @@ spring.thymeleaf.cache=false
 
 
 # ---------------------------------------------------------  #
-# upload 설정
+# upload \uC124\uC815
 # ---------------------------------------------------------  #
-# 파일업로드 설정 여부
+# \uD30C\uC77C\uC5C5\uB85C\uB4DC \uC124\uC815 \uC5EC\uBD80
 spring.servlet.multipart.enabled=true
-# 파일위치
+# \uD30C\uC77C\uC704\uCE58
 spring.servlet.multipart.location=C:\\javaStudy\\upload
-# 최대용량
+# \uCD5C\uB300\uC6A9\uB7C9
 spring.servlet.multipart.max-request-size=30MB
-# 파일당 최대 용량
+# \uD30C\uC77C\uB2F9 \uCD5C\uB300 \uC6A9\uB7C9
 spring.servlet.multipart.max-file-size=10MB
 
-# 도메인 경로
+# \uB3C4\uBA54\uC778 \uACBD\uB85C
 com.spring.myproject.path=C:\\javaStudy\\upload
 
 
-# 로그 레벨 설정
+# \uB85C\uADF8 \uB808\uBCA8 \uC124\uC815
 logging.level.org.springframework=info
 logging.level.com.spring.myproject=debug
 
-# security 로그 레벨 설정 (최대한 낮은 레벨 설정: 에러 메시지 표시됨)
+# security \uB85C\uADF8 \uB808\uBCA8 \uC124\uC815 (\uCD5C\uB300\uD55C \uB0AE\uC740 \uB808\uBCA8 \uC124\uC815: \uC5D0\uB7EC \uBA54\uC2DC\uC9C0 \uD45C\uC2DC\uB428)
 logging.level.org.springframework.security=trace
 
 
